--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,9 @@
 #==============================================================================
 cmake_minimum_required(VERSION 3.0)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CURR_TARGET common_math)
+set(CURR_TARGET ${CBTEK_MATH_LIBRARY})
 set(CURR_TARGET_SOURCES "${CURR_TARGET}_SOURCES")
 set(CURR_TARGET_HEADERS"${CURR_TARGET}_HEADERS")
-include_directories(src)
 include_directories(inc)
 include(${CMAKE_MODULE_PATH}/flags.cmake)
 
@@ -24,4 +23,4 @@ add_library(${CURR_TARGET}
             ${CURR_TARGET_SOURCES}
             ${CURR_TARGET_HEADERS})
 
-add_dependencies(${CURR_TARGET} common_utils)
+add_dependencies(${CURR_TARGET} ${CBTEK_UTILITY_LIBRARY})
